--- a/AUTHORS
+++ b/AUTHORS
@@ -6,7 +6,7 @@ Trevor Bekolay
 John Blischak
 Andy Boughton
 Amy Brown
-Abigail Cabunoc
+Abigail Cabunoc Mayes
 Jonah Duckles
 Rémi Emonet
 Ivan Gonzalez
