[fix #82] fix typo in Rmd instructions

--- a/_episodes_rmd/06-rmarkdown-example.Rmd
+++ b/_episodes_rmd/06-rmarkdown-example.Rmd
@@ -54,9 +54,9 @@ ggplot(diamonds, aes(x = carat,  y = price, color = cut)) +
     geom_point()
 ```
 
-For the challenges and their solutions, you need to pay attention to the where
-the `>` go and where to leave blank lines. Otherwise, you can include chunks in
-it to include instructions and solutions. For instance this:
+For the challenges and their solutions, you need to pay attention to where the
+`>` go and where to leave blank lines. You can include code chunks in both the
+instructions and solutions. For instance this:
 
 ```
 > ## Challenge: Can you do it?
