Updating mailmap and AUTHORS before release

--- a/AUTHORS
+++ b/AUTHORS
@@ -27,3 +27,15 @@ Ashwin Srinath
 Carol Willing
 Greg Wilson
 Naupaka Zimmerman
+Bianca Peterson
+C. Titus Brown
+Donny Winston
+Evan P. Williamson
+Gabriel A. Devenyi
+Gerard Capes
+Ian Carroll
+Kate Hertweck
+Maxim Belkin
+Thomas Guignard
+Tracy Teal
+Valentina Staneva
