Fixed, more compact, ordered mailmap (+fixes)

--- a/AUTHORS
+++ b/AUTHORS
@@ -15,7 +15,6 @@ Mike Jackson
 W. Trevor King
 Christina Koch
 Alexander Konovalov
-Francois Michonneau
 Bill Mills
 Aaron O'Leary
 Jon Pipitone
@@ -39,3 +38,4 @@ Maxim Belkin
 Thomas Guignard
 Tracy Teal
 Valentina Staneva
+François Michonneau
