Update author file

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,11 @@
+This lesson is developed by Dr. Elizabeth Cooper
+and Ashwin Srinath at Clemson University.
+
+The lesson is based on the materials for
+Software Carpentry (software-carpentry.org).
+The authors contributing to the original Software Carpentry
+lesson are listed below:
+
 James Allen
 Pete Bachant
 Piotr Banaszkiewicz
